# DSCensor

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit-lite.yml  pylint.yml
api/: dscensor.yaml
dscensor/: app.py  settings.py  views.py
dscensor/api/: directed_graph.py  dscensor.yaml
hooks/: post_checkout
scripts/: directed_graph.py  test_digraph_loader.py
