[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Connor Cameron", email = "ctc@ncgr.org"},
]
dependencies = [
    "networkx>=3.0",
    "aio-openapi>=3.1.1",
    "black>=23.1.0",
    "pre-commit>=3.0.4",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

[flake8]
max-line-length = 240
